traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:6: error: ';' expected but 'else' found.
                                  else {setPos(getX()+1,getY())}
                                  ^